module-1 with groq

--- a/module-0/basics.ipynb
+++ b/module-0/basics.ipynb
@@ -42,18 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0f9a52c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture --no-stderr\n",
-    "%pip install --quiet -U langchain_openai langchain_core langchain_community tavily-python"
+    "%pip install --quiet -U langchain_openai langchain_core langchain_community tavily-python langchain_groq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c2a15227",
    "metadata": {},
    "outputs": [],
@@ -65,6 +65,16 @@
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
     "_set_env(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8a0b89b6-a8b1-458f-af98-573263985198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_set_env(\"GROQ_API_KEY\")"
    ]
   },
   {
@@ -92,6 +102,17 @@
     "from langchain_openai import ChatOpenAI\n",
     "gpt4o_chat = ChatOpenAI(model=\"gpt-4o\", temperature=0)\n",
     "gpt35_chat = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2854881c-f49a-4829-be78-05bcc8f84683",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_groq import ChatGroq\n",
+    "groq_chat = ChatGroq(model=\"llama3-8b-8192\", temperature=0)"
    ]
   },
   {
@@ -135,6 +156,36 @@
     "\n",
     "# Invoke the model with a list of messages \n",
     "gpt4o_chat.invoke(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "464edec3-777e-46f1-b3c1-452e079e4df6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"Hello world! It's nice to meet you. Is there something I can help you with, or would you like to chat?\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 27, 'prompt_tokens': 12, 'total_tokens': 39, 'completion_time': 0.0225, 'prompt_time': 0.001709277, 'queue_time': 0.018254693000000002, 'total_time': 0.024209277}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_a97cfe35ae', 'finish_reason': 'stop', 'logprobs': None}, id='run-ccb72e6b-3abb-4e43-a50c-2c5f7fea3ea3-0', usage_metadata={'input_tokens': 12, 'output_tokens': 27, 'total_tokens': 39})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.messages import HumanMessage\n",
+    "\n",
+    "# Create a message\n",
+    "msg = HumanMessage(content=\"Hello world\", name=\"Lance\")\n",
+    "\n",
+    "# Message list\n",
+    "messages = [msg]\n",
+    "\n",
+    "# Invoke the model with a list of messages \n",
+    "groq_chat.invoke(messages)"
    ]
   },
   {
@@ -185,6 +236,27 @@
    ],
    "source": [
     "gpt35_chat.invoke(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1898d4cd-cf18-4cd9-bc2f-c7964d1f2b9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"Hello world! It's nice to meet you. Is there something I can help you with, or would you like to chat?\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 27, 'prompt_tokens': 12, 'total_tokens': 39, 'completion_time': 0.0225, 'prompt_time': 0.001710978, 'queue_time': 0.020457902, 'total_time': 0.024210978}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_a97cfe35ae', 'finish_reason': 'stop', 'logprobs': None}, id='run-5b77a8e6-2e5d-4a3a-a2e4-74476ea33f4e-0', usage_metadata={'input_tokens': 12, 'output_tokens': 27, 'total_tokens': 39})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groq_chat.invoke(\"hello world\")"
    ]
   },
   {
@@ -280,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
