--- a/module-1/deployment.ipynb
+++ b/module-1/deployment.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f348498b-f277-4514-b163-fe5ed9afe6fa",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fa75ebd4-91fe-42c5-8122-c81e72133477",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "18b281d8-bd07-4721-922c-347838ceee6b",
    "metadata": {},
    "outputs": [],
@@ -119,22 +119,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "4c96f353-5dc3-41c8-a3e4-6bf07ca455f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'assistant_id': 'fe096781-5601-53d2-b2f6-0d3403f7e9ca',\n",
+       "  'graph_id': 'agent',\n",
+       "  'created_at': '2025-01-23T21:54:36.516191+00:00',\n",
+       "  'updated_at': '2025-01-23T21:54:36.516191+00:00',\n",
+       "  'config': {},\n",
+       "  'metadata': {'created_by': 'system'},\n",
+       "  'version': 1,\n",
+       "  'name': 'agent'},\n",
+       " {'assistant_id': '228f9934-0cdd-5383-92c8-ee8422522cc2',\n",
+       "  'graph_id': 'router',\n",
+       "  'created_at': '2025-01-23T21:54:36.473307+00:00',\n",
+       "  'updated_at': '2025-01-23T21:54:36.473307+00:00',\n",
+       "  'config': {},\n",
+       "  'metadata': {'created_by': 'system'},\n",
+       "  'version': 1,\n",
+       "  'name': 'router'},\n",
+       " {'assistant_id': '28d99cab-ad6c-5342-aee5-400bd8dc9b8b',\n",
+       "  'graph_id': 'simple_graph',\n",
+       "  'created_at': '2025-01-23T21:54:36.152527+00:00',\n",
+       "  'updated_at': '2025-01-23T21:54:36.152527+00:00',\n",
+       "  'config': {},\n",
+       "  'metadata': {'created_by': 'system'},\n",
+       "  'version': 1,\n",
+       "  'name': 'simple_graph'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace this with the URL of your own deployed graph\n",
-    "URL = \"http://localhost:56091\"\n",
+    "URL = \"http://localhost:53327\"\n",
     "client = get_client(url=URL)\n",
     "\n",
     "# Search all hosted graphs\n",
-    "assistants = await client.assistants.search()"
+    "assistants = await client.assistants.search()\n",
+    "assistants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "6a1352fa-68ad-4963-890e-c95d93570917",
    "metadata": {},
    "outputs": [
@@ -143,13 +178,15 @@
       "text/plain": [
        "{'assistant_id': 'fe096781-5601-53d2-b2f6-0d3403f7e9ca',\n",
        " 'graph_id': 'agent',\n",
-       " 'created_at': '2024-08-30T23:58:18.505075+00:00',\n",
-       " 'updated_at': '2024-08-30T23:58:18.505075+00:00',\n",
+       " 'created_at': '2025-01-23T21:54:36.516191+00:00',\n",
+       " 'updated_at': '2025-01-23T21:54:36.516191+00:00',\n",
        " 'config': {},\n",
-       " 'metadata': {'created_by': 'system'}}"
+       " 'metadata': {'created_by': 'system'},\n",
+       " 'version': 1,\n",
+       " 'name': 'agent'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "ba9c28a0-d712-496c-b191-7d620589ba33",
    "metadata": {},
    "outputs": [],
@@ -190,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "f65a4480-66b3-48bf-9158-191a7b8c1c18",
    "metadata": {},
    "outputs": [
@@ -198,10 +235,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'content': 'Multiply 3 by 2.', 'additional_kwargs': {'example': False, 'additional_kwargs': {}, 'response_metadata': {}}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': 'cdbd7bd8-c476-4ad4-8ab7-4ad9e3654267', 'example': False}\n",
-      "{'content': '', 'additional_kwargs': {'tool_calls': [{'index': 0, 'id': 'call_iIPryzZZxRtXozwwhVtFObNO', 'function': {'arguments': '{\"a\":3,\"b\":2}', 'name': 'multiply'}, 'type': 'function'}]}, 'response_metadata': {'finish_reason': 'tool_calls', 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_157b3831f5'}, 'type': 'ai', 'name': None, 'id': 'run-06c7243c-426d-4c81-a113-f1335dda5fb2', 'example': False, 'tool_calls': [{'name': 'multiply', 'args': {'a': 3, 'b': 2}, 'id': 'call_iIPryzZZxRtXozwwhVtFObNO', 'type': 'tool_call'}], 'invalid_tool_calls': [], 'usage_metadata': None}\n",
-      "{'content': '6', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'tool', 'name': 'multiply', 'id': '988cb170-f6e6-43c1-82fd-309f519abe6d', 'tool_call_id': 'call_iIPryzZZxRtXozwwhVtFObNO', 'artifact': None, 'status': 'success'}\n",
-      "{'content': 'The result of multiplying 3 by 2 is 6.', 'additional_kwargs': {}, 'response_metadata': {'finish_reason': 'stop', 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_157b3831f5'}, 'type': 'ai', 'name': None, 'id': 'run-7bda0aa0-6895-4250-9625-18419c5dc171', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': None}\n"
+      "{'content': 'Multiply 3 by 2.', 'additional_kwargs': {'example': False, 'additional_kwargs': {}, 'response_metadata': {}}, 'response_metadata': {}, 'type': 'human', 'name': None, 'id': 'a2a71e75-15bb-4322-8e20-119e00f11d69', 'example': False}\n",
+      "{'content': '', 'additional_kwargs': {'tool_calls': [{'id': 'call_27f4', 'function': {'arguments': '{\"a\": 3, \"b\": 2}', 'name': 'multiply'}, 'type': 'function'}]}, 'response_metadata': {'token_usage': {'completion_tokens': 19, 'prompt_tokens': 377, 'total_tokens': 396, 'completion_time': 0.090844918, 'prompt_time': 0.072189739, 'queue_time': 0.02033301, 'total_time': 0.163034657}, 'model_name': 'llama-3.3-70b-versatile', 'system_fingerprint': 'fp_c0cfa69934', 'finish_reason': 'tool_calls', 'logprobs': None}, 'type': 'ai', 'name': None, 'id': 'run-4279095b-6941-4c69-997b-d17bdcd67aff-0', 'example': False, 'tool_calls': [{'name': 'multiply', 'args': {'a': 3, 'b': 2}, 'id': 'call_27f4', 'type': 'tool_call'}], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 377, 'output_tokens': 19, 'total_tokens': 396}}\n",
+      "{'content': '6', 'additional_kwargs': {}, 'response_metadata': {}, 'type': 'tool', 'name': 'multiply', 'id': '4ec5d198-499a-4929-b07f-d5da984ee472', 'tool_call_id': 'call_27f4', 'artifact': None, 'status': 'success'}\n",
+      "{'content': 'The result of multiplying 3 by 2 is 6.', 'additional_kwargs': {}, 'response_metadata': {'token_usage': {'completion_tokens': 14, 'prompt_tokens': 407, 'total_tokens': 421, 'completion_time': 0.050909091, 'prompt_time': 0.053931004, 'queue_time': 0.120241291, 'total_time': 0.104840095}, 'model_name': 'llama-3.3-70b-versatile', 'system_fingerprint': 'fp_4196e754db', 'finish_reason': 'stop', 'logprobs': None}, 'type': 'ai', 'name': None, 'id': 'run-33fdc6ef-2983-43d9-aaa6-fc91e947dd39-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 407, 'output_tokens': 14, 'total_tokens': 421}}\n"
      ]
     }
    ],
@@ -405,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
